use Locale.US in measure E2E test to prevent decimal separator issue